# Graphics

./: .gitignore  README.md
.github/workflows/: codeql-analysis.yml
exp/: main.go
extension/: go.mod
extension/mu/abstract/: abstract.go  algebra.go  constraint.go  real.go  symbolic.go
extension/mu/generic/: pair.go
extension/mu/linear/: matrix.go  vector.go
extension/mu/queryable/: enumarable.go
extension/test/mu/generic/: iterator_test.go
extension/test/mu/linear/: vector_test.go
graphics/: go.mod  go.sum
graphics/cmd/plot/: canvas.go  figures.go  graph.go  main.go  metric.go  window.go
hcl/: go.mod  main.go  makefile
hcl/lib/: lib.go  math.h
hcl/lib/math/: Cargo.toml  readme.md
hcl/lib/math/src/: lib.rs  math.rs
hcl/test/: lib_test.go
