[package]
name = "math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]


[dependencies]
libc = "0.2.126"
ocl = "0.19"


[target.x86_64-apple-darwin]
rustflags = ["-C", "linker=clang", "-C", "link-arg=-fuse-ld=lld"]